<resources>
    <string name="app_name">Healing Budz</string>
    <string name="intor_one_title">Welcome to Healing Budz</string>
    <string name="intor_one_heading">"Back in the day you got everything\n you needed to know about cannabis\n from your cousin Tommy."</string>
    <string name="intor_one_msg">Today’s cannabis patients are part horticulturalist, part herbalist, and part chemist, but they are also passionate about sharing their knowledge. Our Budz are patients with stories to tell. The Healing Budz community connects you to decades of real life experience. Demystify cannabis and get all the answers you couldn\'t ask Tommy - privately and anonymously.</string>
    <string name="intor_two_title">Live Q&amp;A Forum</string>
    <string name="intor_two_heading">"The Healing Budz Community \nhas heard it all…"</string>
    <string name="intor_two_msg">So ask away and get quick answers to thousands of live questions on a range of plant science and healing topics. Answer questions on your area of experience and earn points towards our rewards program!</string>
    <string name="intor_three_title">Groups</string>
    <string name="intor_three_heading">"Just like the old smoke circles\n around the bonfire…"</string>
    <string name="intor_three_msg">Community is at the core of cannabis culture and Healing Budz is passionate about creating connections. Join and create public or private groups to share healing stories, recipes and advice from patients and connoisseurs all around the globe.</string>
    <string name="facebook_app_id">189648565295722</string>
    <string name="facebook_client_token">0f5945fa9932f34178fbd7cfc469944b</string>
    <string name="fb_login_protocol_scheme">fb189648565295722</string>
    <string name="intor_four_title">Journals</string>
    <string name="fabric_key">313e6a5ad40e17050ecd131800f7e89df95fda80</string>
    <string name="intor_four_heading">"Document your journey as you\n experiment with different strains…"</string>
    <string name="intor_four_msg">Whether you smoke, eat, or use topically, write down all of those cool inventions that you dreamt up last time you felt that creative spark. Share your journals with the Healing Budz community, create a private diary for symptom management and share with close family, friends or your physician.</string>
    <string name="intor_five_title">Strain User Reviews</string>
    <string name="intor_five_heading">"Individualized strain reviews,\n powered by you, not a laboratory…"</string>
    <string name="intor_five_msg">From Acapulco Gold to White Widow, find your strain in our database with our individualized strain reviews, rankings on aroma, taste, potency, genetics, and health benefits. Powered by you, not a laboratory, in a language you can understand without a botany degree. Share your prize worthy bud photos, best growing techniques, mood, sensation, and effects.</string>
    <string name="intor_six_title">Budz Adz</string>
    <string name="intor_six_heading">"Find medical dispensaries,\n physicians, natural healers, smoke\n shops, glass artists, canna chefs…"</string>
    <string name="intor_xis_msg">Discover your local canna community. Be in the know about upcoming deals, promotions, fun industry events, and educational seminars in just a few taps.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string-array name="open_time">
        <item>9:00 AM</item>
        <item>9:30 AM</item>

    </string-array>
    <string-array name="close_time">
        <item>7:00 PM</item>
        <item>7:30 PM</item>

    </string-array>
    <string name="double_cors">&quot;</string>
    <string name="email"><u>cutlerfarms@gmail.com</u></string>
    <string name="website"><u>www.cutlerfarms.com</u></string>
    <string name="facebook"><u>facebook.com/cutlerfarms</u></string>
    <string name="twitter"><u>twitter.com./cutlerfarms</u></string>
    <string name="instagram"><u>intagram.com/cutlerfarms</u></string>
    <string name="syns_backup_restore"><![CDATA[Syns, backup & restore]]></string>
    <string name="data_backup_restore"><![CDATA[Data Backup & Restore]]></string>
    <string-array name="shopping_item">
        <item>Values</item>
        <item>Values2</item>
        <item>Values3</item>
        <item>Values4</item>
        <item>Values5</item>

    </string-array>
    <string name="dialog_done_text">DONE</string>
    <string name="dialog_cancel_text">CANCEL</string>
    <string name="list_empty">No items to display</string>
    <string name="select_entry">Select Entries</string>
    <string name="validation_text">Please select atleast one option</string>
    <string name="please_select_atleast">Please select atleast </string>
    <string name="you_can_only_select_upto">You can only select upto </string>
    <string name="option"> option</string>
    <string name="options"> options</string>
    <string name="select_all">select all</string>
    <string name="de_select_all">deselect all</string>
    <string name="date_today">Today</string>
    <string name="start_survey_text">Take our Strain Survey and receive</string>
    <string name="question_1">What medical conditions have you effectively treated with this strain?</string>
    <string name="question_2">Which moods or sensations have you experienced with this strain?</string>
    <string name="question_3">"What negative effects have you \n experienced with this strain?"</string>
    <string name="question_4">Are you currently using cannabis as preventive medication?</string>
    <string name="question_5">"Which 3 prevention areas are you \n focusing on?"</string>
    <string name="question_6">"What flavor profiles would you \n associate with this strain?"</string>
    <string name="dialog_title">Select Up to 3 Values</string>
    <string name="ok_label">ok</string>
    <string name="dismiss_label">Cancel</string>
    <string name="clear_all_label">clear_all</string>
    <string name="default_colour_value" translatable="false">#8e8e8e</string>
    <string name="default_icon_value" translatable="false">ic_logo</string>
</resources>