<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="4.5"
            android:background="#f8931f"
            android:orientation="vertical"
            android:weightSum="10">

            <com.codingpixel.healingbudz.customeUI.HealingBudTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_weight="2"
                android:gravity="bottom|center_horizontal"
                android:text="@string/intor_three_title"
                android:textColor="@color/white"
                android:textSize="@dimen/intro_screen_title_font_size" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginTop="10sp"
                android:layout_weight="8"
                android:padding="20sp"
                android:src="@drawable/ic_intro_three_imgg" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="5.5"
            android:background="#ec8105">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ec8105"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="@dimen/intro_screen_heading_margin">

                <com.codingpixel.healingbudz.customeUI.HealingBudTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/intor_three_heading"
                    android:textColor="#e6e6e6"
                    android:textSize="@dimen/intro_screen_heading_font_size" />

                <com.codingpixel.healingbudz.customeUI.HealingBudTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="18sp"
                    android:layout_marginRight="18sp"
                    android:layout_marginTop="@dimen/intro_screen_heading_to_description_margin"
                    android:lineSpacingExtra="2dp"
                    android:text="@string/intor_three_msg"
                    android:textColor="#e6e6e6"
                    android:textSize="@dimen/intro_screen_discription_font_size" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>