<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:orientation="horizontal"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:visibility="visible"
            android:weightSum="10">

            <com.codingpixel.healingbudz.customeUI.HealingBudTextViewBold
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:text="Zip Code"
                android:textColor="#8c2a81"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.codingpixel.healingbudz.customeUI.HealingBudTextView
                android:id="@+id/zip_code"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="6.5"
                android:text="@string/email"
                android:textColor="#e773e7"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/other_links"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:orientation="horizontal"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:weightSum="10">

                <com.codingpixel.healingbudz.customeUI.HealingBudTextViewBold
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:text="Website"
                    android:textColor="#8c2a81"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.codingpixel.healingbudz.customeUI.HealingBudTextView
                    android:id="@+id/website"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:text="@string/website"
                    android:textColor="#e773e7"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:orientation="horizontal"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:weightSum="10">

                <com.codingpixel.healingbudz.customeUI.HealingBudTextViewBold
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:text="Facebook"
                    android:textColor="#8c2a81"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.codingpixel.healingbudz.customeUI.HealingBudTextView
                    android:id="@+id/facebook"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:text="@string/facebook"
                    android:textColor="#e773e7"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:orientation="horizontal"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:weightSum="10">

                <com.codingpixel.healingbudz.customeUI.HealingBudTextViewBold
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:text="Twitter"
                    android:textColor="#8c2a81"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.codingpixel.healingbudz.customeUI.HealingBudTextView
                    android:id="@+id/twitter"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:text="@string/twitter"
                    android:textColor="#e773e7"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6sp"
                android:orientation="horizontal"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:weightSum="10">

                <com.codingpixel.healingbudz.customeUI.HealingBudTextViewBold
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3.5"
                    android:text="Instagram"
                    android:textColor="#8c2a81"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <com.codingpixel.healingbudz.customeUI.HealingBudTextView
                    android:id="@+id/instagram"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6.5"
                    android:text="@string/instagram"
                    android:textColor="#e773e7"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>