<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    android:background="@drawable/edit_diss_n"
    android:orientation="vertical">

    <com.codingpixel.healingbudz.customeUI.HealingBudTextViewRegular
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15sp"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:text="@string/select_entry"
        android:textColor="#f4c42f"
        android:textSize="@dimen/font_size_heading" />

    <android.support.v7.widget.SearchView
        android:id="@+id/search_view_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#f4c42f"
        android:iconifiedByDefault="true"
        android:paddingEnd="20sp"
        android:paddingStart="10sp"
        android:queryHint="Search"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="33sp"
        android:layout_marginBottom="@dimen/searchview_margin"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="@dimen/searchview_margin"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2sp"
            android:layout_marginTop="2sp"
            android:background="@drawable/qa_fragment_search_bg_white">

            <com.codingpixel.healingbudz.customeUI.HealinBudEditText
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:gravity="center"
                android:hint="search"
                android:imeActionLabel="Search"
                android:imeOptions="actionDone"
                android:inputType="text|textAutoComplete"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/white"
                android:textSize="16sp" />
            <!--676766-->
            <ImageView
                android:id="@+id/search_button"
                android:layout_width="42sp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:padding="7sp"
                android:src="@drawable/ic_qa_fragment_search" />
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/select_all_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15sp"
        android:layout_marginStart="15sp"
        android:layout_marginTop="@dimen/layout_margin"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/select_all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"

            android:buttonTint="@color/colorAccent"
            android:clickable="false" />

        <TextView
            android:id="@+id/select_all_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginStart="@dimen/textview_margin"
            android:text="@string/select_all"
            android:textAllCaps="true"
            android:textSize="@dimen/font_size_subheading" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginBottom="@dimen/searchview_margin"
        android:layout_marginEnd="@dimen/line_margin"
        android:layout_marginStart="@dimen/line_margin"
        android:layout_marginTop="@dimen/recyclerview_margin"
        android:background="@color/colorPrimary"
        android:visibility="gone" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:layout_weight="1">

        <view
            android:id="@+id/recycler_view"
            class="com.codingpixel.healingbudz.customeUI.multiselect.RecyclerViewEmptySupport"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.codingpixel.healingbudz.customeUI.HealingBudTextViewRegular
            android:id="@+id/list_empty1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/list_empty"
            android:textColor="#f4c42f"
            android:textSize="@dimen/font_size_normal" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:orientation="horizontal">

        <com.codingpixel.healingbudz.customeUI.HealingBudTextViewRegular
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/dialog_cancel_text"
            android:textColor="#f4c42f"
            android:textSize="@dimen/text_button_size" />

        <com.codingpixel.healingbudz.customeUI.HealingBudTextViewRegular
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="end"
            android:text="@string/dialog_done_text"
            android:textColor="#f4c42f"
            android:textSize="@dimen/text_button_size" />
    </LinearLayout>
</LinearLayout>